# FasterHTML

./: .gitignore  README.md  pyproject.toml
src/fasterhtml/: HtmlElements.py  __init__.py  alembic.ini  app.py
src/fasterhtml/migrations/: env.py
src/fasterhtml/migrations/versions/: 95d66f39900c_create_notes_table.py
